# gclub

./: .gitignore  CMakeLists.txt  Makefile  README  compile_commands.json
include/: gclub_admin.hpp  gclub_client.hpp  gclub_desktop.hpp  gclub_event.hpp  gclub_model.hpp  gclub_time.hpp  t_file_parser.hpp
src/: gclub_model.cpp  main.cpp  t_file_parser.cpp
tests/: compl_t  event_3_t  event_4_t  events_1_2_t  in_syn_t1  in_syn_t2  in_syn_t3  in_syn_t4  in_syn_t5
